bk_ida/gccida/c0/expand_builtin_expect
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/builtins.c:3880:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *exp; // [rsp+20h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/builtins.c:3895:24: error: use of undeclared identifier 'machine_mode'
targeta = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), targeta); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/builtins.c:3895:39: error: expected expression
targeta = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), targeta); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/builtins.c:3896:32: error: use of undeclared identifier 'machine_mode'
rtx_c = expand_expr( c, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), EXPAND_NORMAL); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/builtins.c:3896:47: error: expected expression
rtx_c = expand_expr( c, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), EXPAND_NORMAL); 
                                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_expect/src/obj/builtins.o] Error 1
